--- a/src/PublicSpeaker.Web/PublicSpeaker.Web.csproj
+++ b/src/PublicSpeaker.Web/PublicSpeaker.Web.csproj
@@ -6,4 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Services\" />
+    <None Remove="Middleware\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Middleware\" />
+  </ItemGroup>
 </Project>
