--- a/src/PublicSpeaker.Web/PublicSpeaker.Web.csproj
+++ b/src/PublicSpeaker.Web/PublicSpeaker.Web.csproj
@@ -5,21 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\" />
+    <Content Update="appsettings.*.json" CopyToPublishDirectory="Never" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-    <Folder Include="Views\Queue\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="Views\Queue\" />
-  </ItemGroup>
+
 </Project>
