Depend on someone else for https.

--- a/src/PublicSpeaker.Web/appsettings.Development.json
+++ b/src/PublicSpeaker.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Spotify": {
+    "ClientId": "79bb5681fa7749f886d718642f4f5a38",
+    "ClientSecret": "f9b26a12d21d4803b70d6df55bca122c"
   }
 }
